Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57045

crash when calling pause() in onPositionChanged

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.10.0 Alpha
    • 5.6.0, 5.7.0, 5.8.0
    • Multimedia
    • None
    • Tested on macOS and Linux, should be reproducible on any platform
    • e26e0edd0c3a0e6120008c8a146d8514163930c4

    Description

      When calling pause() in a Video.onPositionChanged() notification, the application crashes (at least on a Mac).
      This problem is illustrated by the example below

      import QtQuick 2.5
      import QtQuick.Window 2.2
      import QtMultimedia 5.5
      
      Window {
          visible: true
          width: 640
          height: 480
          title: qsTr("Hello World")
      
          Video {
                 id: v1
                 anchors.fill:  parent
                 source: "http://devimages.apple.com/iphone/samples/bipbop/gear1/prog_index.m3u8"
                 onStatusChanged: console.log("Status V1 "+status + "//" + MediaPlayer.Buffering)
                 onAvailabilityChanged: console.log("Availability V1 "+availability)
                 onErrorChanged: console.log("Error V1 "+error + "//"+ errorString)
                 onPlaybackStateChanged: console.log("PlaybackState V1 "+playbackState)
      
                 onPositionChanged: pause()
             }
      
          Component.onCompleted: {
              v1.play()
          }
      
      }
      
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            wearyinside Oleg Yadrov
            vdaele vdaele
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes