MediaPlayer: fix crash on pause() call in onPositionChanged handler

Once a second QMediaObjectPrivate iterates through the properties
registered with QMediaObject::addPropertyWatch call and invokes their
%propertyName%Changed signals. It does it using C++11 range-based for
loop. MediaPlayer::pause() and MediaPlayer::stop() calls led to
removePropertyWatch(“position”) call, which removed “position” property
index from notifyProperties container and invalidated iterator in the
loop.

Task-number: QTBUG-57045
Change-Id: I855aa004a30dc78b61dbd3423dae0a771e68fda4
Reviewed-by: Yoann Lopes <yoann.lopes@qt.io>